syntax = "proto3";

package Discussify.Protos;

service InteractionService {
    rpc GetInteractionsByTargetId (GetInteractionsByTargetIdRequest) returns (GetInteractionsByTargetIdResponse);
    rpc GetCommentInteractionsByIds (GetCommentInteractionsByIdsRequest) returns (GetCommentInteractionsByIdsResponse);
}

// GetInteractionsByTargetId
message GetInteractionsByTargetIdRequest {
    int32 targetId = 1;
}

message GetInteractionsByTargetIdResponse {
    int32 upvote = 1;
    int32 downvote = 2;
    int32 comment = 3;
}

// GetCommentInteractionsByIds
message GetCommentInteractionsByIdsRequest {
    repeated int32 commentIds = 1;
}

message GetCommentInteractionsByIdsResponse {
    repeated CommentInteraction interactionCounts = 1;
}

message CommentInteraction {
    int32 commentId = 1;
    int32 upvote = 2;
    int32 downvote = 3;
}